# -

./: README.md
astar/: untitled.m
cnn卷积神经/: CNN_圆形vs方形分类.docx  generate_report.py  model.py  predict.py  requirements.txt  train.py  utils.py
cnn卷积神经/results/: best_model.pth  classification_report.txt  training_history.txt
ros开发/: doc_text_output.txt  generate_report.py  实验一 常用开发和代码管理工具(1) (1).docx  实验三 ROS语音对话实验.docx  实验二 机器人URDF模型建立及仿真(1).docx  实验四 人脸检测和自主导航实验.docx  重庆邮电大学实验报告册.doc  重庆邮电大学实验报告册.docx
ros开发/ros_code/catkin_ws/src/car_description/: CMakeLists.txt  package.xml
ros开发/ros_code/catkin_ws/src/car_description/config/: controllers.yaml
ros开发/ros_code/catkin_ws/src/car_description/launch/: car_display.launch  car_gazebo.launch
ros开发/ros_code/catkin_ws/src/car_description/scripts/: car_teleop.py
ros开发/ros_code/catkin_ws/src/car_description/urdf/: car.urdf
ros开发/ros_code/catkin_ws/src/car_description/world/: car_world.world
ros开发/ros_code/catkin_ws/src/hello_ros/: package.xml
ros开发/ros_code/catkin_ws/src/hello_ros/src/: listener.py  talker.py
ros开发/ros_code/catkin_ws/src/my_robot/: CMakeLists.txt  package.xml  setup.sh
ros开发/ros_code/catkin_ws/src/my_robot/config/: costmap_common.yaml  dwa_planner.yaml  four_wheel.rviz  global_costmap.yaml  local_costmap.yaml  move_base.yaml  navigation.rviz  slam.rviz
ros开发/ros_code/catkin_ws/src/my_robot/launch/: amcl_navigation.launch  experiment1_face_detect.launch  four_wheel_car.launch  gazebo.launch  gmapping.launch  map_saver.launch  map_server.launch
ros开发/ros_code/catkin_ws/src/my_robot/maps/: my_map.pgm  my_map.yaml
ros开发/ros_code/catkin_ws/src/my_robot/scripts/: face_detector.py  four_wheel_controller.py
ros开发/ros_code/catkin_ws/src/my_robot/urdf/: four_wheel_car.urdf  my_robot.urdf
ros开发/ros_code/catkin_ws/src/my_robot/worlds/: room.world
ros开发/ros_code/catkin_ws/src/voice_control/: CMakeLists.txt  package.xml
ros开发/ros_code/catkin_ws/src/voice_control/launch/: voice_control.launch
ros开发/ros_code/catkin_ws/src/voice_control/scripts/: iflytek_voice_control.py  sphinx_demo.py
ros开发/ros_code/ros_speech_ws/src/speech_demo/: CMakeLists.txt  package.xml  speech_recog.py  speech_recog.py.bak  speech_recog_zh.py
