<package format="2">
  <name>car_description</name>
  <version>0.0.0</version>
  <description>ROS Noetic Car Simulation</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- 编译依赖 -->
  <build_depend>rospy</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>gazebo_ros</build_depend>
  
  <!-- 运行依赖 -->
  <exec_depend>rospy</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>ros-noetic-ros-control</exec_depend>
  <exec_depend>ros-noetic-ros-controllers</exec_depend>
  <exec_depend>ros-noetic-gazebo-ros-control</exec_depend>
</package>
