<?xml version="1.0"?>
<package format="2">
  <name>voice_control</name>
  <version>0.0.1</version>
  <description>ROS Voice Control using iFlytek SDK</description>
  <maintainer email="user@todo.com">user</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>turtlesim</exec_depend>
  <export></export>
</package>
